# mlL1Muon

./: CMakeLists.txt  README.md  copyResults.sh  copyResultsGmt.sh  copyResultsMnist.sh  pathsAndSymbols.xml
lutNN/: .cproject  .gitignore  .project  Makefile
lutNN/interface/: InputNodeFactory.h  LutNetwork.h  MNISTParser.h  Node.h  Utlis.h
lutNN/macros/: LutPlots.cc
lutNN/src/: InputNodeFactory.cpp  LutNetwork.cpp  MNISTParser.cpp  Node.cpp  Utlis.cpp  lutNN.cpp  mnist.cpp  mnist2.cpp  mnistL2FullyCon.cpp  mnistOneOutVal.cpp  mnistOneOutVal1.cpp  tf.cpp  tf_fourLayers.cpp  tf_simple.cpp
lutNN2/: .cproject  .gitignore  .project  Makefile  drawP.cc
lutNN2/interface/: BinaryLutNetwork.h  ClassifierToRegression.h  CostFunction.h  Event.h  EventsGeneratorBase.h  EventsGeneratorGmt.h  EventsGeneratorMnist.h  EventsGeneratorOmtf.h  GmtAnalyzer.h  InputNodeFactory.h  LayerConfig.h  LutBinary.h  LutInter.h  LutInterNetwork.h  LutLayer.h  LutLayerFixedPoint.h  LutNetworkBase.h  LutNetworkFixedPoint.h  LutNetworkFixedPointRegression.h  LutNetworkFixedPointRegression2Outputs.h  LutNeuronLayerFixedPoint.h  LutNode.h  NetworkBuilder.h  NetworkOutNode.h  NetworkSerialization.h  Node.h  OmtfAnalyzer.h  SumNode.h  Utlis.h
lutNN2/src/: BinaryLutNetwork.cpp  ClassifierToRegression.cpp  CostFunction.cpp  Event.cpp  EventsGeneratorBase.cpp  EventsGeneratorGmt.cpp  EventsGeneratorMnist.cpp  EventsGeneratorOmtf.cpp  GmtAnalyzer.cpp  InputNodeFactory.cpp  LutBinary.cpp  LutInter.cpp  LutInterNetwork.cpp  LutLayer.cpp  LutLayerFixedPoint.cpp  LutNetworkBase.cpp  LutNetworkFixedPoint.cpp  LutNeuronLayerFixedPoint.cpp  LutNode.cpp  MNISTParser.cpp  NetworkBuilder.cpp  NetworkOutNode.cpp  NetworkSerialization.cpp  Node.cpp  OmtfAnalyzer.cpp  SumNode.cpp  Utlis.cpp
lutNN2/test/: gmtBinaryLutNN1.cpp  gmtBinaryLutNNTest.cpp  gmtLutInter1.cpp  lutNetworkFixedPointTest.cpp  mnistBinaryLutNN1.cpp  mnistBinaryLutNN2.cpp  mnistBinaryLutNN3.cpp  mnistBinaryLutNN4.cpp  mnistBinaryLutNN5.cpp  mnistLutBinaryNN.cpp  mnistLutInter1.cpp  mnistLutInter2.cpp  omtfClassifier1.cpp  omtfClassifier2.cpp  omtfClassifierTest.cpp  omtfClassifierTestFixedPoint.cpp  omtfRegression1.cpp  omtfRegression2.cpp  omtfRegressionTest.cpp  omtfRegressionTest2.cpp  omtfRegressionTestFixedPoint.cpp
lutNN_tf_1/: .gitignore  .project  BinaryLutNetwork.py  Classic_NN_performance.ipynb  Classic_NN_performance.py  Classic_NN_training.ipynb  Classic_NN_training.py  IO_tests.ipynb  LUT_NN_performance.ipynb  LUT_NN_performance.py  LUT_NN_training.py  LutInterLayer.py  LutLayer.py  OMTF_NN_v1-Copy1.py  README.md  architecture_definitions.py  io_functions.py  lutInterLayer_test.py  mnist_lut_inter2.py  mnist_test.py  plotting_functions.py
lutNN_tf_1/.ipynb_checkpoints/: Classic_NN_performance-checkpoint.ipynb  Classic_NN_training-checkpoint.ipynb  IO_tests-checkpoint.ipynb  LUT_NN_training-checkpoint.ipynb  OMTF_NN_v1-Copy1-checkpoint.py  OMTF_NN_v1-checkpoint.py  lutLayer-checkpoint.md  mnist_lut_inter-checkpoint.py  mnist_test1-checkpoint.py  model_functions-checkpoint.py  utility_functions-checkpoint.py
